horizontal scroll on navigation bar solved

--- a/style/index.css
+++ b/style/index.css
@@ -1,15 +1,20 @@
 body {
-    margin: 0;
+    margin: 0px;
     font-family: Arial, sans-serif;
+    padding: 0px;
+    width: 100%;
 }
 
 .navbar {
     background-color: #ffffff;
-    padding: 10px 20px;
+    width: 100%;
+    padding: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
     border: 1px solid black;
+    margin: 0px;
 }
 
 .logo img {
